--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,40 +5,21 @@ description: Lorem ipsum dolor sit amet
 %header
   .header-content
     .header-content-inner
-      %h1 Amazing apps, fast
+      %h1 Amazing punchline
       %p
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse lectus. Mauris sed nulla quis nisi interdum tempor. 
         Proin diam augue, semper vitae, varius et, viverra id, felis. 
       %a.btn.btn-primary.btn-xl.page-scroll{:href => "#getstarted"} Get Started
-    .container-fluid
-      .row.toned
-        .col-lg-2.col-lg-offset-2.col-xs-6.col-md-3
-          = link_to "API Reference", "/api.html", :class => "icon", :id => "apiref"
-        .col-lg-2.col-xs-6.col-md-3
-          %a#hig.icon
-            Design Guidelines
-        .col-lg-2.col-xs-6.col-md-3
-          %a#tutorials.icon
-            Tutorials
-        .col-lg-2.col-xs-6.col-md-3
-          %a#flatpak.icon
-            Distribute
-    .container
-      .header-content-inner
-        %h2 Flexible components for any solution
-        %p
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse lectus. Mauris sed nulla quis nisi interdum tempor. 
-          Proin diam augue, semper vitae, varius et, viverra id, felis. 
-        %a.btn.btn-primary.btn-xl.page-scroll{:href => "#tech"} GNOME Technologies Overview
+    
 %section
   .container
     .row
-      .col-sm-3.col-sm-offset-1.box
-        %h1 Get Involved in GNOME
+      .col-sm-3.col-sm-offset-1
+        %h2 Social Media
         %p
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse lectus.  
-      .col-sm-7.box
-        %h1 GNOME Development Guides
+      .col-sm-7
+        %h2 News
         %p
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse lectus. Mauris sed nulla quis nisi interdum tempor. 
           Proin diam augue, semper vitae, varius et, viverra id, felis. 
