--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -27,9 +27,9 @@
             %span.icon-bar
             %span.icon-bar
           -if (current_page.path == 'index.html')
-            = link_to "Developer", "#page-top", :class => "navbar-brand page-scroll"
+            = link_to data.site.name, "#page-top", :class => "navbar-brand page-scroll"
           -else
-            = link_to "Developer", "index.html", :class => "navbar-brand page-scroll"
+            = link_to data.site.name, "index.html", :class => "navbar-brand page-scroll"
 
         = partial "navigation"
       / /.container-fluid
